--- a/BlissIOSTest/Podfile
+++ b/BlissIOSTest/Podfile
@@ -2,7 +2,10 @@
 # platform :ios, '10.0'
 
 target 'BlissIOSTest' do
+    use_frameworks!
+    inhibit_all_warnings!
 	pod 'Alamofire', '~> 4.5’
     	pod 'AlamofireImage', '~> 3.3’
 	pod 'SwiftyJSON', '3.1.4'
+	pod 'MBProgressHUD', '~> 1.1.0'
 end
