--- a/BlissIOSTest/Podfile
+++ b/BlissIOSTest/Podfile
@@ -8,4 +8,5 @@ target 'BlissIOSTest' do
     	pod 'AlamofireImage', '~> 3.3’
 	pod 'SwiftyJSON', '3.1.4'
 	pod 'MBProgressHUD', '~> 1.1.0'
+	pod 'ReachabilitySwift', '~> 3'
 end
