--- a/BlissIOSTest/BlissIOSTest/Info.plist
+++ b/BlissIOSTest/BlissIOSTest/Info.plist
@@ -22,6 +22,17 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>blissrecruitment</string>
+            </array>
+            <key>CFBundleURLName</key>
+            <string>questions</string>
+        </dict>
+    </array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
